# rime-tibetan

./: CMakeLists.txt  README.md
data/: tibetan.dict.yaml  tibetan.schema.yaml  tibetan.yaml
src/: tibetan.cc  tibetan.h  tibetan_engine.cc  tibetan_test.cc
